--- a/client/src/css-modules/LoginForm.module.css
+++ b/client/src/css-modules/LoginForm.module.css
@@ -1,9 +1,10 @@
 .submitButton {
     display: block;
-    margin: 1em auto;
+    margin: 3em auto 0 auto;
 }
 
 .loginForm {
     width: 20vw;
+    padding: 4vh 0;
     margin: 0 auto;
 }
