Completed error handling for login component

--- a/client/src/css-modules/LoginForm.module.css
+++ b/client/src/css-modules/LoginForm.module.css
@@ -8,3 +8,13 @@
     padding: 4vh 0;
     margin: 0 auto;
 }
+
+.errorContainer {
+    display: block;
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+.loginHeader {
+    margin-bottom: 1em;
+}
