--- a/client/src/css-modules/HomePage.module.css
+++ b/client/src/css-modules/HomePage.module.css
@@ -59,3 +59,10 @@
     min-width: 10vw;
     justify-content: space-evenly;
 }
+
+.headerTopRow__rightContainer_loggedIn {
+    display: flex;
+    padding-top: 1em;
+    min-width: 11vw;
+    justify-content: space-evenly;
+}
