--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 body.modal-open {
     overflow: auto !important;
 }
+
+.loggedInButton.btn[class*="btn-outline-"] {
+    padding: 0.54em 0.5em 0.3em 0.5em;
+    height: 4vh;
+}
+
+.loggedInButton {
+    padding: 0.3em 0.7em;
+}
