--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,8 @@ body.modal-open {
 .loggedInButton {
     padding: 0.3em 0.7em;
 }
+
+.form-control:focus {
+    border-color: #ffba60;
+    box-shadow: 0 0 0 0.2rem rgba(202, 108, 0, 0.25);
+}
