--- a/client/src/css-modules/EditFlowPage.module.css
+++ b/client/src/css-modules/EditFlowPage.module.css
@@ -17,3 +17,17 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.pageContainer {
+    display: grid;
+    grid-template-columns: repeat(5, 20vw);
+    grid-template-rows: repeat(5, 20vh);
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.noteCardContainer {
+    display: flex;
+    flex-direction: column;
+    grid-column: 5 / 7;
+    margin-right: 1.2em;
+}
