--- a/client/src/css-modules/EditFlowPage.module.css
+++ b/client/src/css-modules/EditFlowPage.module.css
@@ -1,5 +1,9 @@
 .formAndPlayerContainer {
     position: relative;
+    grid-column: 1 / 4;
+    grid-row: 1 / 5;
+    margin-left: 16em;
+    margin-top: 2em;
 }
 
 .noteForm {
@@ -29,8 +33,8 @@
 .noteCardContainer {
     display: flex;
     flex-direction: column;
-    grid-column: 5 / 7;
-    grid-row: 1 / 8;
+    grid-column: 5 / 6;
+    grid-row: 1 / 6;
     margin-right: 1.2em;
     width: 21vw;
     background-color: rgb(231, 231, 231);
@@ -58,4 +62,11 @@
 
 .textarea {
     padding: 1.2em;
+}
+
+.buttonContainer {
+    display: flex;
+    width: 52.3vw;
+    justify-content: space-between;
+    margin-top: 1em;
 }
