--- a/client/src/css-modules/FlowTitleAndForm.module.css
+++ b/client/src/css-modules/FlowTitleAndForm.module.css
@@ -7,9 +7,17 @@
 
 .textalign {
     display: block;
-    margin: auto 0;
+    margin: 0.7em 0 auto 0.4em;
 }
 
 .formContainer {
     display: flex;
+    justify-content: space-between;
+    width: inherit;
+}
+
+.input {
+    width: 70%;
+    margin-top: 0.2em;
+    font-size: 1.46em;
 }
