--- a/client/src/css-modules/EditFlowPage.module.css
+++ b/client/src/css-modules/EditFlowPage.module.css
@@ -2,10 +2,9 @@
 
 .formAndPlayerContainer {
     position: relative;
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
     grid-row: 1 / 5;
-    margin-left: 16em;
-    margin-top: 2em;
+    margin: 2em auto 0 auto;
 }
 
 .noteForm {
@@ -13,7 +12,7 @@
     width: 24vw;
     height: 16vh;
     top: 58.5vh;
-    left: 0.2vw;
+    left: 0.6vw;
     background-color: white;
     padding: 0.7em;
     border-radius: 3px;
