--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,6 +82,6 @@ body.modal-open {
     padding-bottom: 2em;
     border-left: 2px solid rgb(200, 200, 200);
     box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.2);
-    height: 100vh;
+    min-height: 100vh;
     overflow-y: scroll;
 }
