--- a/client/src/css-modules/BrowseFlows.module.css
+++ b/client/src/css-modules/BrowseFlows.module.css
@@ -1,13 +1,29 @@
 .cardContainer {
     display: grid;
-    width: 80vw;
-    grid-template-columns: repeat(4, 25%);
+    width: 90vw;
+    grid-template-columns: repeat(5, 20%);
     grid-template-rows: repeat(4, 25%);
-    margin-left: 30vw;
-    min-height: 100vh;
+    margin-left: 10vw;
 }
 
 .pageContainer {
-    min-height: 160vh;
+    min-height: 100vh;
     overflow: hidden;
+}
+
+.header {
+    margin: 0.6em 0 1em 11vw;
+}
+
+.trashButton {
+    position: absolute;
+    bottom: 4px;
+    right: 4px;
+}
+
+.innerText {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    height: 6em;
 }
