--- a/client/src/css-modules/EditFlowPage.module.css
+++ b/client/src/css-modules/EditFlowPage.module.css
@@ -115,3 +115,8 @@
     justify-content: space-between;
     margin: 2.4em auto 0 auto;
 }
+
+.noteContainerHeader {
+    color: grey;
+    margin: 0.6em auto 0 auto;
+}
