--- a/client/src/css-modules/RecentFlows.module.css
+++ b/client/src/css-modules/RecentFlows.module.css
@@ -1,14 +1,15 @@
 .cardContainer {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 3em;
 }
 
 .header {
     text-align: center;
-    padding-bottom: 0.5em;
-    margin-bottom: 1em;
 }
 
 .section {
-    margin-top: 3em;
+    margin-top: 2.4em;
+    grid-column: 2 / 6;
+    grid-row: 1 / 4;
 }
