--- a/client/src/css-modules/BrowseFlows.module.css
+++ b/client/src/css-modules/BrowseFlows.module.css
@@ -1,10 +1,9 @@
 .cardContainer {
-    display: grid;
+    display: flex;
     width: 90vw;
-    grid-template-columns: repeat(5, 20%);
-    grid-template-rows: repeat(4, 25%);
-    margin-left: 10vw;
+    margin-left: 6.8vw;
     min-height: 80vh;
+    justify-content: space-evenly;
 }
 
 .pageContainer {
