--- a/client/src/css-modules/BrowseFlows.module.css
+++ b/client/src/css-modules/BrowseFlows.module.css
@@ -1,18 +1,16 @@
 .cardContainer {
-    display: flex;
-    width: 90vw;
-    margin-left: 6.8vw;
-    min-height: 80vh;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(3, 33%);
+    width: 74vw;
+    margin: 0 auto;
+    min-height: 120vh;
     justify-content: space-evenly;
 }
 
 .pageContainer {
     min-height: 100vh;
     overflow: hidden;
-}
-
-.header {
-    margin: 0.6em 0 1em 11vw;
 }
 
 .trashButton {
@@ -30,11 +28,15 @@
 
 .headerContainer {
     display: flex;
-    margin: 2em 0 2em 13em;
-    width: 26vw;
+    width: 28vw;
+    margin: 2em 0 1em 16.6em;
     justify-content: space-between;
 }
 
 .catHeader {
     margin: auto 0;
+}
+
+.card {
+    transform: scale(0.94);
 }
