--- a/client/src/css-modules/BrowseCats.module.css
+++ b/client/src/css-modules/BrowseCats.module.css
@@ -1,7 +1,14 @@
 .cardContainer {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 3em;
+}
+
+.header {
+    font-size: 24px;
+    margin-left: 116px;
+    font-weight: 500;
+
+    margin-bottom: 12px;
 }
 
 .card {
@@ -11,10 +18,15 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.header {
-    text-align: center;
+.container {
+    padding-top: 36px;
 }
 
-.container {
-    margin-top: 14em;
+.cover {
+    height: 261px;
+    width: 187px;
+
+    box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.2);
+
+    border-radius: 4px;
 }
