--- a/client/src/css-modules/HomePage.module.css
+++ b/client/src/css-modules/HomePage.module.css
@@ -72,8 +72,8 @@
     min-width: 80vw;
     min-height: 120vh;
     padding-bottom: 8em;
-    grid-template-columns: repeat(6, 17%);
-    grid-template-rows: repeat(5, 20%);
+    grid-template-columns: 14% repeat(4, 18%) 14%;
+    grid-template-rows: 400px repeat(4, 420px);
 }
 
 .pageContainer {
