--- a/client/src/css-modules/RecentFlows.module.css
+++ b/client/src/css-modules/RecentFlows.module.css
@@ -1,15 +1,36 @@
 .cardContainer {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 3em;
 }
 
 .header {
-    text-align: center;
+    font-size: 28px;
+    font-weight: 500;
+
+    margin-left: 20px;
+    margin-top: 4px;
+}
+
+.headerContainer {
+    display: flex;
+
+    padding-top: 10px;
+    margin-left: 56px;
+    margin-top: 8px;
 }
 
 .section {
-    margin-top: 5.2em;
-    grid-column: 2 / 6;
-    grid-row: 1 / 4;
+    margin: 0 auto;
+    width: 80%;
+}
+
+.outerSection {
+    grid-row: 2 / 3;
+    grid-column: 1 / 8;
+    background-color: #FFFBF8;
+}
+
+.logo {
+    height: 40px;
+    width: 40px;
 }
