Notes scroll into view when out of view

--- a/client/src/css-modules/DeleteFlowForm.module.css
+++ b/client/src/css-modules/DeleteFlowForm.module.css
@@ -1,7 +1,7 @@
 .formContainer {
     font-size: 2em;
     color: black;
-    width: 16vw;
+    width: 310px;
     text-align: center;
     margin: auto;
 }
