Refactored errors for login and signup to be in self-contained component

--- a/client/src/css-modules/HomePageFooter.module.css
+++ b/client/src/css-modules/HomePageFooter.module.css
@@ -14,12 +14,16 @@
     list-style: none;
 }
 
+.footerList:hover {
+    cursor: default;
+}
+
 .listItem {
     color: white;
 }
 
 .listItem:hover {
-    color: rgb(111, 113, 151);
+    color: rgb(204, 204, 212);
 }
 
 .secondFooterList {
