--- a/client/src/css-modules/LoginForm.module.css
+++ b/client/src/css-modules/LoginForm.module.css
@@ -13,6 +13,8 @@
     display: block;
     margin-bottom: 1em;
     text-align: center;
+    list-style: none;
+    height: 10px;
 }
 
 .loginHeader {
