--- a/client/src/css-modules/FlowTitleAndForm.module.css
+++ b/client/src/css-modules/FlowTitleAndForm.module.css
@@ -22,7 +22,18 @@
     font-size: 1.46em;
 }
 
-.errors {
-    height: 5.2vh;
-    width: 18vw;
+.errorContainer {
+    position: absolute;
+    height: 24px;
+    width: 240px;
+
+    top: 32px;
+    right: 225px;
+}
+
+.errorList {
+    text-align: center;
+    list-style: none;
+    margin-top: -10px;
+    font-size: 14px;
 }
