--- a/client/src/css-modules/BrowseFlows.module.css
+++ b/client/src/css-modules/BrowseFlows.module.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(4, 25%);
     grid-auto-rows: 380px;
-    width: 78vw;
+    width: 1498px;
     margin: 0px 211px 0px 240px;
     min-height: 851px;
     justify-content: space-evenly;
@@ -25,14 +25,14 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    height: 6em;
+    height: 84px;
     font-size: 14px;
 }
 
 .headerContainer {
     display: flex;
-    width: 28vw;
-    margin: 2em 0 1em 16.6em;
+    width: 538px;
+    margin: 32px 0 16px 266px;
     justify-content: space-between;
 }
 
