--- a/client/src/css-modules/DeleteFlowForm.module.css
+++ b/client/src/css-modules/DeleteFlowForm.module.css
@@ -1,5 +1,5 @@
 .formContainer {
-    font-size: 2em;
+    font-size: 32px;
     color: black;
     width: 310px;
     text-align: center;
@@ -8,7 +8,7 @@
 
 .buttonContainer {
     display: flex;
-    width: 10vw;
-    margin: 1em auto 0 auto;
+    width: 192px;
+    margin: 32px auto 0 auto;
     justify-content: space-between;
 }
