--- a/client/src/css-modules/EditFlowPage.module.css
+++ b/client/src/css-modules/EditFlowPage.module.css
@@ -4,20 +4,22 @@
     position: relative;
     grid-column: 1 / 5;
     grid-row: 1 / 5;
-    margin: 2em auto 0 auto;
+    margin: 32px auto 0 auto;
 }
 
 .noteForm {
     position: absolute;
-    width: 24vw;
-    height: 16vh;
-    top: 58.5vh;
-    left: 0.3vw;
+    width: 436px;
+    height: 126px;
+    top: 548px;
+    left: 6px;
     background-color: white;
-    padding: 0.7em;
+    padding: 11px;
     border-radius: 3px;
     border: 1px solid rgb(207, 207, 207);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+
+    box-sizing: content-box;
 }
 
 .noteFormButtons {
@@ -35,8 +37,8 @@
 }
 
 .noteCard {
-    margin: 0.8em 0;
-    height: 18vh;
+    margin: 13px 0;
+    height: 169px;
 }
 
 .buttonDiv {
@@ -48,12 +50,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 8vh;
+    height: 75px;
 }
 
 .buttonContainer {
     display: flex;
-    width: 58.6vw;
+    width: 1125px;
     justify-content: space-between;
     margin-top: 1em;
 }
@@ -76,9 +78,11 @@
 }
 
 .newNoteErrors {
-    height: 2.8vh;
+    height: 8.5px;
     font-size: 12px;
-    padding-top: 0.4vh;
+    padding-top: 4px;
+
+    box-sizing: content-box;
 }
 
 .noteTopRow {
@@ -98,10 +102,6 @@
     list-style: none;
 }
 
-.editNoteErrors ul {
-    padding-left: 1.5vw;
-}
-
 .trashButton {
     position: absolute;
     top: 12px;
@@ -117,7 +117,7 @@
 
 .deleteButtonsContainer {
     display: flex;
-    width: 12vw;
+    width: 230px;
     justify-content: space-between;
     margin: 2.4em auto 0 auto;
 }
