--- a/client/src/css-modules/FetchFlow.module.css
+++ b/client/src/css-modules/FetchFlow.module.css
@@ -5,7 +5,7 @@
 }
 
 .formContainer {
-    width: 40vw;
+    width: 768px;
     margin: 4em auto 0 auto;
 }
 
@@ -19,15 +19,15 @@
 
 .youtubeLogo {
     filter: grayscale(100);
-    height: 8vh;
-    width: 4vw;
-    margin-bottom: 0.6em;
+    height: 75px;
+    width: 77px;
+    margin-bottom: 10px;
 }
 
 .nestedDiv {
     display: flex;
     flex-direction: column;
-    width: 6vw;
+    width: 115px;
 }
 
 .youtubeText {
