--- a/client/src/css-modules/NotFound.module.css
+++ b/client/src/css-modules/NotFound.module.css
@@ -3,8 +3,8 @@
 }
 
 .textContainer {
-    width: 80vw;
-    height: 50vh;
+    width: 1536px;
+    height: 469px;
     margin: 12% auto;
     text-align: center;
 }
