--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,18 +11,13 @@ body.modal-open {
     overflow: auto !important;
 }
 
-.loggedInButton.btn[class*="btn-outline-"] {
-    padding: 0.5em 0.5em 0.4em 0.5em;
-    height: 4vh;
-}
-
 .loggedInButton {
-    padding: 0.3em 1.4em;
+    padding: 4px 18px;
 }
 
 .form-control:focus {
     border-color: #ffba60;
-    box-shadow: 0 0 0 0.2rem rgba(202, 108, 0, 0.25);
+    box-shadow: 0 0 0 2px rgba(202, 108, 0, 0.25);
 }
 
 .md-form .prefix.active {
@@ -67,12 +62,13 @@ body.modal-open {
 }
 
 .activeCard {
-    margin-right: 1em;
-    padding-right: 2em;
-    padding-left: 0.8em;
-    width: 20vw;
-    margin: 0.8em 0;
+    padding-right: 32px;
+    padding-left: 13px;
+    width: 339px;
+    margin: 13px 0;
     transition: filter 0.3s, transform 0.3s, padding-right 0.3s, margin 0.3s;
+
+    box-sizing: content-box;
 }
 
 .ytp-pause-overlay .ytp-pause-overlay-controls-hidden
@@ -85,14 +81,15 @@ body.modal-open {
     flex-direction: column;
     grid-column: 5 / 6;
     grid-row: 1 / 6;
-    margin-right: 1.2em;
-    width: 21vw;
+    margin-right: 19px;
+    width: 402px;
     background-color: rgb(231, 231, 231);
-    padding-bottom: 2em;
+    padding-bottom: 32px;
     border-left: 2px solid rgb(200, 200, 200);
     box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.2);
     min-height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 a {
