Styling refactor finished

--- a/client/src/css-modules/FetchFlow.module.css
+++ b/client/src/css-modules/FetchFlow.module.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 
 .topRow {
-    margin: 2em 0 2.5em 0;
+    margin: 32px 0 48px 0;
 }
 
 .formContainer {
     width: 768px;
-    margin: 4em auto 0 auto;
+    margin: 64px auto 0 auto;
 }
 
 .formText {
     font-family: 'Lato', Helvetica;
+    width: 768px;
 }
 
 .logoContainer {
-    margin: 4em auto 4em auto;
+    margin: 64px auto 64px auto;
 }
 
 .youtubeLogo {
@@ -31,7 +32,7 @@
 }
 
 .youtubeText {
-    font-size: 1.2em;
+    font-size: 19px;
     font-weight: 400;
     color: #707070;
 }
