--- a/client/src/css-modules/FlowTitleAndForm.module.css
+++ b/client/src/css-modules/FlowTitleAndForm.module.css
@@ -1,13 +1,13 @@
 .container {
     display: flex;
-    width: 1125;
+    width: 1125px;
     justify-content: space-between;
-    margin-bottom: 1em;
+    margin-bottom: 16px;
 }
 
 .textalign {
     display: block;
-    margin: 0.7em 0 auto 0.4em;
+    margin: 16.8px 0 auto 9.6px;
 }
 
 .formContainer {
@@ -18,8 +18,8 @@
 
 .input {
     width: 80%;
-    margin-top: 0.2em;
-    font-size: 1.46em;
+    margin-top: 5px;
+    font-size: 23.4px;
 }
 
 .errorContainer {
