--- a/client/src/css-modules/HomePage.module.css
+++ b/client/src/css-modules/HomePage.module.css
@@ -35,34 +35,34 @@
 }
 
 .headerTopRow__homeLink {
-    padding-top: 0.5em;
+    padding-top: 8px;
     display: flex;
-    width: 10em;
+    width: 160px;
     justify-content: space-around;
 }
 
 .flowNotesLogo {
-    height: 3em;
+    height: 48px;
 }
 
 .flowNotesText {
     font-family: 'Shadows Into Light';
     color: white;
-    font-size: 1.6em;
+    font-size: 25.6px;
     margin: auto 0;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 .headerTopRow__rightContainer_notLoggedIn {
     display: flex;
-    padding-top: 1em;
+    padding-top: 16px;
     min-width: 192px;
     justify-content: space-evenly;
 }
 
 .headerTopRow__rightContainer_loggedIn {
     display: flex;
-    padding-top: 1em;
+    padding-top: 16px;
     min-width: 192px;
     justify-content: space-evenly;
 }
