--- a/client/src/css-modules/LoginForm.module.css
+++ b/client/src/css-modules/LoginForm.module.css
@@ -1,6 +1,6 @@
 .submitButton {
     display: block;
-    margin: 3em auto 0 auto;
+    margin: 38px auto 0 auto;
 }
 
 .loginForm {
@@ -11,12 +11,12 @@
 
 .errorContainer {
     display: block;
-    margin-bottom: 1em;
+    margin-bottom: 16px;
     text-align: center;
     list-style: none;
     height: 10px;
 }
 
 .loginHeader {
-    margin-bottom: 1em;
+    margin-bottom: 16px;
 }
