--- a/client/src/css-modules/NewFlowPage.module.css
+++ b/client/src/css-modules/NewFlowPage.module.css
@@ -1,7 +1,7 @@
 .videoInfoContainer {
-    margin-top: -1em;
+    margin-top: -16px;
 }
 
 .headerText {
-    margin-bottom: 0.8em;
+    margin-bottom: 13px;
 }
