--- a/client/src/css-modules/HomePageInfo.module.css
+++ b/client/src/css-modules/HomePageInfo.module.css
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: space-between;
 
-    width: 26%;
+    width: 324.5px;
 }
 
 .singleButtonContainer {
@@ -84,7 +84,7 @@
     justify-content: space-around;
     align-items: center;
 
-    width: 72%;
+    width: 850.5px;
     height: 300px;
 
     margin-top: -44px;
@@ -94,7 +94,7 @@
 }
 
 .learnMoreText {
-    width: 42%;
+    width: 324px;
 
     color: white;
     font-size: 18px;
