--- a/client/src/css-modules/NotFound.module.css
+++ b/client/src/css-modules/NotFound.module.css
@@ -5,6 +5,6 @@
 .textContainer {
     width: 1536px;
     height: 469px;
-    margin: 12% auto;
+    margin: 230px auto;
     text-align: center;
 }
