--- a/client/src/css-modules/BrowseCats.module.css
+++ b/client/src/css-modules/BrowseCats.module.css
@@ -1,27 +1,34 @@
 .cardContainer {
-    display: flex;
-    justify-content: space-evenly;
-
-    margin-left: 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header {
-    font-size: 24px;
-    margin-left: 150px;
-    font-weight: 500;
+  font-size: 24px;
+  font-weight: 500;
 
-    margin-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 .container {
-    padding-top: 36px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 36px;
+  margin: 0 auto;
+
+  max-width: 1080px;
 }
 
 .cover {
-    height: 261px;
-    width: 187px;
+  height: 261px;
+  width: 187px;
 
-    box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.2);
 
-    border-radius: 4px;
+  border-radius: 4px;
+}
+
+@media screen and (max-width: 1440px) {
 }
