--- a/client/src/css-modules/BrowseFlowRow.module.css
+++ b/client/src/css-modules/BrowseFlowRow.module.css
@@ -1,63 +1,63 @@
 .cardContainer {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .header {
-    font-size: 28px;
-    font-weight: 500;
+  font-size: 28px;
+  font-weight: 500;
 
-    margin-left: 16px;
-    margin-top: 4px;
+  margin-left: 16px;
+  margin-top: 4px;
 }
 
 .headerContainer {
-    display: flex;
+  display: flex;
 
-    padding-top: 10px;
-    margin-left: 56px;
-    margin-top: 8px;
+  padding-top: 10px;
+  margin-left: 56px;
+  margin-top: 8px;
 }
 
 .section {
-    margin: 0 auto;
-    width: 1522px;
+  margin: 0 auto;
+  width: 80%;
 }
 
 .outerSection {
-    grid-row: 2 / 3;
-    grid-column: 1 / 8;
-    background-color: #FFFBF8;
+  grid-row: 1 / 2;
+  grid-column: 1 / 8;
+  background-color: #fffbf8;
 }
 
 .lolOuterSection {
-    grid-row: 3 / 4;
-    grid-column: 1 / 8;
+  grid-row: 2 / 3;
+  grid-column: 1 / 8;
 }
 
 .ssbmOuterSection {
-    grid-row: 4 / 5;
-    grid-column: 1 / 8;
-    background-color: #FFFBF8;
+  grid-row: 3 / 4;
+  grid-column: 1 / 8;
+  background-color: #fffbf8;
 }
 
 .owOuterSection {
-    grid-row: 5 / 6;
-    grid-column: 1 / 8;
+  grid-row: 4 / 5;
+  grid-column: 1 / 8;
 }
 
 .csgoOuterSection {
-    grid-row: 6 / 7;
-    grid-column: 1 / 8;
-    background-color: #FFFBF8;
+  grid-row: 5 / 6;
+  grid-column: 1 / 8;
+  background-color: #fffbf8;
 }
 
 .logo {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 
 .csgoLogo {
-    width: 76px;
-    height: 36px;
+  width: 76px;
+  height: 36px;
 }
