--- a/client/src/css-modules/BrowseFlowRow.module.css
+++ b/client/src/css-modules/BrowseFlowRow.module.css
@@ -1,54 +1,48 @@
 .cardContainer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .header {
   font-size: 28px;
   font-weight: 500;
-
-  margin-left: 16px;
-  margin-top: 4px;
+  margin-top: 6px;
+  margin-left: 10px;
 }
 
 .headerContainer {
   display: flex;
-
-  padding-top: 10px;
-  margin-left: 56px;
-  margin-top: 8px;
+  max-width: 490px;
+  margin-left: 24px;
 }
 
 .section {
-  margin: 0 auto;
-  width: 80%;
+  padding: 0px 12%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.outerSection {
+.recent {
   grid-row: 1 / 2;
-  grid-column: 1 / 8;
   background-color: #fffbf8;
 }
 
-.lolOuterSection {
+.lol {
   grid-row: 2 / 3;
-  grid-column: 1 / 8;
 }
 
-.ssbmOuterSection {
+.ssbm {
   grid-row: 3 / 4;
-  grid-column: 1 / 8;
   background-color: #fffbf8;
 }
 
-.owOuterSection {
+.ow {
   grid-row: 4 / 5;
-  grid-column: 1 / 8;
 }
 
-.csgoOuterSection {
+.csgo {
   grid-row: 5 / 6;
-  grid-column: 1 / 8;
   background-color: #fffbf8;
 }
 
@@ -60,4 +54,15 @@
 .csgoLogo {
   width: 76px;
   height: 36px;
+}
+
+@media screen and (max-width: 1440px) {
+  .headerContainer {
+    margin-left: 26px;
+    padding-left: 0;
+  }
+
+  .section {
+    padding: 16px 2% 1.8% 0;
+  }
 }
