--- a/client/src/css-modules/HomePage.module.css
+++ b/client/src/css-modules/HomePage.module.css
@@ -69,9 +69,8 @@
 
 .bodyContainer {
   display: grid;
-  min-width: 80vw;
-  min-height: 80vh;
-  grid-template-columns: 14% repeat(4, 18%) 14%;
+  min-width: 1440px;
+  min-height: 900px;
   grid-template-rows: repeat(5, 440px);
 }
 
